# First-third-person-feedback-experiments

./: .gitignore  README.txt  Untitled.ipynb  accelerate_config.yaml  best_of_N.py  best_of_N_async.py  data.json  fix_dataset.py  get_questions_political.py  manual_verification.py  preferences.ipynb  pyproject.toml  requirements.txt  setup.cfg  shuffle_dataset.py  train_PM.py  train_PM_public.py
API/: create_requests.py  parallel.py  process_requests.py  test_requests_1_1.jsonl  test_requests_1_3.jsonl  test_requests_3_1.jsonl  test_requests_3_3.jsonl  test_results_1_1.jsonl  test_results_1_3.jsonl  test_results_3_1.jsonl  test_results_3_3.jsonl
data/datasets/: all_personalization_3_1_gpt-3.5-turbo_fortraining.jsonl  all_personalization_3_1_gpt-4o_fortest.jsonl  all_personalization_3_1_gpt-4o_fortraining.jsonl  all_personalization_3_3_gpt-3.5-turbo_fortraining.jsonl  all_personalization_3_3_gpt-4o_fortest.jsonl  (+192 more)
dataset_gen_prompts/: danger_refusal.txt  impossible_task.txt  personalisation.txt
datasets/: hh_test_3_1.jsonl  sycophancy_fact.jsonl  sycophancy_fact_fix.jsonl  sycophancy_fact_split.jsonl  sycophancy_mini.jsonl  sycophancy_opinion_political.jsonl  sycophancy_opinion_political_fix.jsonl
generate_datasets/: create_requests.py  parallel.py
notebooks/: EDA_prism.ipynb  EDA_prism_conversation.ipynb  preferences.ipynb
output/: BoN_scores.txt
reference/: README.txt  best_of_N.py  best_of_N_demo.py  train_PM.py  train_PM_public.py
scratch_pads/: internal_messages_scratchpad.json
src/: README.txt
templates/: index.html
utils/: shuffle_dataset.py
(+108 files in other folders)
